<resources>
    <string name="app_name">Walkish</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="start">start session</string>
    <string name="main_date">Monday 25/1/2016</string>
    <string name="main_time">00:00:00</string>
    <string name="title_activity_walking_map">Walkish</string>
    <string name="start_activity">START ACTIVITY</string>
    <string name="duration">00:00:00</string>
    <string name="duration_label">DURATION</string>
    <string name="distance">0.00</string>
    <string name="distance_label">DISTANCE (KM)</string>
    <string name="calories">0</string>
    <string name="calories_label">CALORIES (CAL)</string>
    <string name="speed">0.00</string>
    <string name="speed_label">SPEED (KPH)</string>
    <string name="stop">STOP</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="title_activity_routes_history">History</string>
    <string name="empty_history">No saved activities found</string>
    <string name="history_distance">0.00 km</string>
    <string name="history_date">Mon, 11/01/2016</string>
    <string name="title_activity_history_details">Map</string>
    <string name="title_activity_history_map">Map</string>
    <string name="average_speed">Average Speed</string>
    <string name="finish_time">Finish Time</string>
    <string name="start_time">Start Time</string>
    <string name="action_menu">Menu</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="main">Home</string>
    <string name="session">Start session</string>
    <string name="to_from">21:35 to 21:59</string>

    <string-array name="colourRouteArray">
        <item>Blue</item>
        <item>Black</item>
        <item>Green</item>
        <item>Red</item>
    </string-array>
    <string-array name="mapTypesArray">
        <item>Hybrid</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
    <string-array name="values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="gpsUpdateList">
        <item>Every 15 seconds</item>
        <item>Every 30 seconds/30 meters</item>
        <item>Every 60 seconds/60 meters</item>
        <item>Every 120 seconds/100 meters</item>
    </string-array>
    <string-array name="gpsUpdateValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


</resources>
