<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item
        android:id="@+id/menu_main"
        android:icon="@drawable/ic_action_menu_white"
        android:orderInCategory="100"
        android:title="@string/action_menu"
        app:showAsAction="always|withText">
        <menu>
            <!-- start history activity -->
            <item
                android:id="@+id/choose_history"
                app:showAsAction="ifRoom"
                android:title="@string/history"/>
            <!-- show settings -->
            <item
                android:id="@+id/choose_settings"
                app:showAsAction="never"
                android:title="@string/settings"/>

        </menu>
    </item>

</menu>
