<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dv606.eo222fw.walkish.WalkingMapActivity"
    android:background="@android:color/white"
    android:id="@+id/map_activity_layout"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:alpha="0.8"
        android:id="@+id/walking_info">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:id="@+id/txt_duration"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_label"
                android:id="@+id/txt_duration_label"
                android:layout_gravity="center_horizontal"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:id="@+id/txt_distance"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_label"
                    android:id="@+id/txt_distance_label"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:id="@+id/txt_calories"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_label"
                    android:id="@+id/txt_calories_label"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:id="@+id/txt_speed"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_label"
                    android:id="@+id/txt_speed_label"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_and_buttons">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/map_view"
            android:name="com.google.android.gms.maps.SupportMapFragment"
                  class="com.google.android.gms.maps.SupportMapFragment"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_activity"
                android:id="@+id/btn_start_activity"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:background="@android:color/holo_green_light"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/activity_controls"
            android:layout_marginLeft="140dp"
            android:layout_marginBottom="15dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:id="@+id/btn_pause_resume"
                android:layout_weight="4"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                 />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtn_lock"
                android:background="@android:color/holo_blue_light"
                android:src="@drawable/ic_action_lock_on"
                android:layout_weight="2" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:id="@+id/btn_stop"
                android:layout_toLeftOf="@+id/imageView"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_alignBottom="@+id/imageView"
                android:background="@android:color/darker_gray"
                android:layout_weight="4"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
