<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="dv606.eo222fw.walkish.HistoryDetailsActivity"
              android:orientation="vertical">

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:tools="http://schemas.android.com/tools"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:id="@+id/map2"
          android:name="com.google.android.gms.maps.SupportMapFragment"
          android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/map2"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/history_distance">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:id="@+id/txt_history_distance"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_label"
                        android:id="@+id/txt_history_distance_label"
                        android:textSize="10sp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/history_duration">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:id="@+id/txt_history_duration"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_label"
                        android:id="@+id/txt_history_duration_label"
                        android:textSize="10sp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/history_calories">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calories"
                        android:id="@+id/txt_history__calories"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calories_label"
                        android:id="@+id/txt_history_calories_label"
                        android:textSize="10sp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/start_time">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:id="@+id/txt_start_time_label"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:id="@+id/txt_start_time"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/finish_time">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/finish_time"
                    android:id="@+id/txt_finish_time_label"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:id="@+id/txt_finish_time"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/average_speed">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/average_speed"
                    android:id="@+id/txt_average_speed_label"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:id="@+id/txt_average_speed"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>