<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/history_date"
            android:id="@+id/txt_history_date"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/history_distance"
            android:id="@+id/txt_history_distance"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/to_from"
            android:id="@+id/txt_from_to"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

</LinearLayout>