<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
              android:background="@drawable/main_bg_shape">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_date"
            android:id="@+id/txt_date"
            android:layout_gravity="bottom|center"
            android:paddingBottom="20dp"
            android:textSize="35sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_time"
            android:id="@+id/txt_time"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/btn_start"
            android:layout_gravity="bottom|center"
            android:background="@android:color/holo_blue_light"
            android:shadowColor="@color/dim_foreground_disabled_material_dark"
            android:textColor="@android:color/white"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>
    </LinearLayout>
</LinearLayout>
